name container margin updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header>
 
-        <h1 id="orgName" class="text-center">PH Cash Memo</h1>
+        <h1 id="orgName" class="text-center">RS Creative Enterprise</h1>
         <p id="orgAddress">Mirpur - 69.5, Dhaka-335500, Dhaka, Bangladesh</p>
         <p id="orgContact">01318630358, 0123465789213  || phcashmemo@contact.com</p>
     </header>
@@ -45,8 +45,8 @@
             </div>
         </section>
 
-        <section>
-            <table id="prdctTlb">
+        <section class="mt-10">
+            <table id="prdctTlb" class="h-1/2">
                 <tr>
                     <th class="">Sl No.</th>
                     <th>Product Description</th>
