--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 
     <main>
         <section>
-            <h1 id="invBll">Invoice/Bill</h1>
+            <h1 id="invBll" class="text-2xl font-bold my-5">Invoice/Bill</h1>
         </section>
         <section>
             <div class="" id="invsDtl">
-                <div class="">
+                <div class="space-y-2">
                     <p>Sales Order No : <span id="slsOrdNo"></span></p>
                     <p>Invoice No: <span id="invsno"></span></p>
                     <p>Buyer name : <span id="buyrName"></span></p>
                     <p>Buyer Address <span id="buyeAddress"></span></p>
                 </div>
-                <div class="">
+                <div class="space-y-2">
                     <p>Date : <span id="date"></span></p>
                     <p>Time : <span id="time"></span></p>
                     <p>Sold By : <span id="sldBy"></span></p>
@@ -46,21 +46,25 @@
         </section>
 
         <section class="mt-10">
-            <table id="prdctTlb" class="h-1/2">
-                <tr>
-                    <th class="">Sl No.</th>
-                    <th>Product Description</th>
-                    <th>Quantity</th>
-                    <th>Unit Price</th>
-                    <th style="border-bottom: 2px solid black;">Total</th>
+            <table id="prdctTlb" class="h-1/2 w-full border">
+                <tr class="p-4 border-[2px] text-center">
+                    <th class="border-r-2">Sl No.</th>
+                    <th class="border-r-2">Product Description</th>
+                    <th class="border-r-2">Quantity</th>
+                    <th class="border-r-2">Unit Price</th>
+                    <th class="border-r-2" style="border-bottom: 2px solid black;">Total</th>
                 </tr>
-                <tr>
-                    <td>01</td>
-                    <td>BENQ 2244HQ</td>
-                    <td>1</td>
-                    <td>14500</td>
-                    <td>14500</td>
-                </tr>
+                <tbody id="dtlsOfPrdcts">
+
+                    <tr class="*:p-4 *:text-center *:border-x-2">
+                        <td>01</td>
+                        <td>BENQ 2244HQ</td>
+                        <td>1</td>
+                        <td>14500</td>
+                        <td>14500</td>
+                    </tr>
+                </tbody>
+
             </table>
         </section>
 
